---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 13. 04. 2024.
  Info:
    - Initial release
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 20. 04. 2024.
  Changes:
    - Add SHIFT on graph button to open production panel
  Fixes:
    - Fix crash at startup

---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 25. 04. 2024.
  Fixes:
    - Add compatibility with Blueprint Sandox (Add <ALT>+<Graph button> to exit from Graph Exitor directly to Nauvis)
    - Add layer management (<Shift>Click on recipe in graph, parameters in global settings)
    - Fix crash on translations
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 29. 04. 2024.
  Fixes:
    - Fix force change in enter/exit
    - Fix invalid solver solution
  Changes:
    - Add summary of all machines used in a production
    - Misc. improvements on layer
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 30. 04. 2024.
  Fixes:
    - Fix clear of savings
    - Loading current selected saving does not override saved one
    - Save position in graph upon exit
  Changes:
    - Alt-k on an assembly machine or a furnace move the graph to the corresponding machine