@@ -230,3 +230,4 @@ missing_label=Missing label
 save-tooltip=__CONTROL_LEFT_CLICK__ replace any selection with same icons and text or create a new save.
 load-tooltip=__CONTROL_LEFT_CLICK__ replace the current selection by the selection under mouse.\n __CONTROL_KEY_CTRL__ __CONTROL_LEFT_CLICK__ save the current selection and replace by the one under mouse \n __CONTROL_KEY_SHIFT__ __CONTROL_LEFT_CLICK__ merge the selection under mouse with the current selection.
 delete-tooltip=__CONTROL_LEFT_CLICK__ delete the selection under mouse.
+pinned-tooltip=Keep the selection at the top of the list
